change name of files

--- a/start/index.html
+++ b/start/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./how-to-play_modal.css" />
+    <link rel="stylesheet" href="./start_modal.css" />
+    <title>How to play</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./how-to-play_modal.css">
-  <title>How to play</title>
-</head>
-
-<body>
-  <section class="how-to-play modal">
-    <h2 class="how-to-play__headline">How To Play?</h2>
-    <div class="how-to-play__close"><img src="./img/Cansel-button@1X.png" alt="close_btn"></div>
-    <div class="how-to-play__wrapper">
-      <p class="how-to-play__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora laudantium fuga
-        minima voluptatum? Voluptatibus consequatur unde aliquam maiores dolores fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti animi aperiam quo illum consequuntur velit rem repudiandae corporis sapiente voluptatibus. Tempore hic nesciunt possimus sapiente provident, sequi ea reprehenderit recusandae deleniti maiores nam explicabo temporibus. Dolorum distinctio iste ullam expedita impedit minus? Autem, nesciunt. Quo possimus nulla expedita cupiditate. Repellat, repellendus eveniet. Omnis dignissimos vero esse doloremque cumque vel, dolorem voluptatibus commodi minima asperiores deserunt tenetur quod vitae velit ducimus perspiciatis quo ab exercitationem incidunt necessitatibus deleniti sequi sed a. Temporibus molestiae eius tempore libero, esse delectus dolor unde natus cumque aspernatur facilis odit earum!</p>
-      <div class="how-to-play__photo-wrapper">
-        <div></div>
-        <div></div>
+  <body>
+    <section class="start modal">
+      <div class="start__logo-wrapper">
+        <a
+          target="_blank"
+          href="https://dmytrokolisnyk2.github.io/ubermensches_project/build/"
+          class="start__link"
+        >
+          <img src="./img/logo-big@1X.png" class="start__logo" alt="logo"
+        /></a>
       </div>
-    </div>
-  </section>
-</body>
+      <div class="start__controls-wrapper">
+        <div class="start__how-to-play start__open-modal start__controls">A</div>
 
+        <button class="start__btn start__open-modal" type="button">
+          <span class="start__btn-text">play</span>
+        </button>
+        <div class="start__how-to-play start__open-modal start__controls">?</div>
+      </div>
+    </section>
+  </body>
 </html>
