--- a/how-to-play/index.html
+++ b/how-to-play/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./variables.css">
   <link rel="stylesheet" href="./how-to-play_modal.css">
   <title>How to play</title>
 </head>
@@ -15,7 +17,14 @@
     <div class="how-to-play__close"><img src="./img/Cansel-button@1X.png" alt="close_btn"></div>
     <div class="how-to-play__wrapper">
       <p class="how-to-play__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora laudantium fuga
-        minima voluptatum? Voluptatibus consequatur unde aliquam maiores dolores fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti animi aperiam quo illum consequuntur velit rem repudiandae corporis sapiente voluptatibus. Tempore hic nesciunt possimus sapiente provident, sequi ea reprehenderit recusandae deleniti maiores nam explicabo temporibus. Dolorum distinctio iste ullam expedita impedit minus? Autem, nesciunt. Quo possimus nulla expedita cupiditate. Repellat, repellendus eveniet. Omnis dignissimos vero esse doloremque cumque vel, dolorem voluptatibus commodi minima asperiores deserunt tenetur quod vitae velit ducimus perspiciatis quo ab exercitationem incidunt necessitatibus deleniti sequi sed a. Temporibus molestiae eius tempore libero, esse delectus dolor unde natus cumque aspernatur facilis odit earum!</p>
+        minima voluptatum? Voluptatibus consequatur unde aliquam maiores dolores fugit. Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Deleniti animi aperiam quo illum consequuntur velit rem repudiandae corporis
+        sapiente voluptatibus. Tempore hic nesciunt possimus sapiente provident, sequi ea reprehenderit recusandae
+        deleniti maiores nam explicabo temporibus. Dolorum distinctio iste ullam expedita impedit minus? Autem,
+        nesciunt. Quo possimus nulla expedita cupiditate. Repellat, repellendus eveniet. Omnis dignissimos vero esse
+        doloremque cumque vel, dolorem voluptatibus commodi minima asperiores deserunt tenetur quod vitae velit ducimus
+        perspiciatis quo ab exercitationem incidunt necessitatibus deleniti sequi sed a. Temporibus molestiae eius
+        tempore libero, esse delectus dolor unde natus cumque aspernatur facilis odit earum!</p>
       <div class="how-to-play__photo-wrapper">
         <div></div>
         <div></div>
