--- a/start/index.html
+++ b/start/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./how-to-play_modal.css" />
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./variables.css" />
     <link rel="stylesheet" href="./start_modal.css" />
     <title>How to play</title>
   </head>
