--- a/game_and_menu/index.html
+++ b/game_and_menu/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./variables.css" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./game_and_menu.css" />
     <link rel="shortcut icon"
       href="https://avatars.githubusercontent.com/u/69747115?v=4"
       type="image/x-icon" />
