--- a/site/index.html
+++ b/site/index.html
@@ -97,13 +97,13 @@
               <h2 class="settings__headline">Виберіть кількість часу</h2>
               <div class="count-timer__wrapper settings__wrappers">
                 <button type="button" class="settings__btn count-timer" data-count="30">
-                  0,5 хв</button
+                  0.5 min</button
                 ><button type="button" class="settings__btn count-timer settings__btn--choosed" data-count="60">
-                  1 хв</button
+                  1 min</button
                 ><button type="button" class="settings__btn count-timer" data-count="120">
-                  2 хв</button
+                  2 min</button
                 ><button type="button" class="settings__btn count-timer" data-count="180">
-                  3 хв
+                  3 min
                 </button>
               </div>
             </div>
