--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <!-- TESTING -->
     <main class="main">
       <section class="start modal">
         <div class="start__logo-wrapper">
