add authors modal

--- a/site/index.html
+++ b/site/index.html
@@ -53,6 +53,50 @@
           </div>
         </div>
       </section>
+      <!-- <section class="modal" id="authors_modal1">
+        <div class="authors_content">
+          <span class="authors_close"><img src="./img/Cansel-button@1X.png" alt="#"></span>
+          <h2 class="authors_title">authors of this game</h2>
+          <div class="authors_wrapper">
+            <div class="authors_card">
+              <img class="authors_img" src="./img/authors1.png" alt="Bradley Hunter">
+              <h4 class="authors_name">
+                Bradley Hunter
+              </h4>
+              <p class="authors_text">
+                Based in Chicago. I love playing tennis and loud music.
+              </p>
+            </div>
+            <div class="authors_card">
+              <img class="authors_img" src="./img/authors2.png" alt="Bradley Hunter">
+              <h4 class="authors_name">
+                Bradley Hunter
+              </h4>
+              <p class="authors_text">
+                Based in Chicago. I love playing tennis and loud music.
+              </p>
+            </div>
+            <div class="authors_card">
+              <img class="authors_img" src="./img/authors3.png" alt="Bradley Hunter">
+              <h4 class="authors_name">
+                Bradley Hunter
+              </h4>
+              <p class="authors_text">
+                Based in Chicago. I love playing tennis and loud music.
+              </p>
+            </div>
+            <div class="authors_card">
+              <img class="authors_img" src="./img/authors4.png" alt="Bradley Hunter">
+              <h4 class="authors_name">
+                Bradley Hunter
+              </h4>
+              <p class="authors_text">
+                Based in Chicago. I love playing tennis and loud music.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section> -->
       <section class="settings modal hidden-modal">
         <div class="settings__type-wrapper">
           <div
@@ -172,7 +216,7 @@
         <div class="win__content-wrapper">
           <h2 class="win__headline">You WIN!</h2>
           <button class="win__btn win__open-menu win__open-modal" type="button">
-            <span class="win__btn-text">Back to menu</span></button><button class="win__btn win__open-modal" type="button">
+            <span class="win__btn-text">Back to menu</span></button><button class="win__btn win__replay win__open-modal" type="button">
             <span class="win__btn-text">Replay</span>
           </button>
         </div>
@@ -181,7 +225,7 @@
         <div class="win__content-wrapper">
           <h2 class="win__headline">You LOSE</h2>
           <button class="win__btn win__open-menu win__open-modal" type="button">
-            <span class="win__btn-text">Back to menu</span></button><button class="win__btn win__open-modal" type="button">
+            <span class="win__btn-text">Back to menu</span></button><button class="win__btn win__replay win__open-modal" type="button">
             <span class="win__btn-text">Replay</span>
           </button>
         </div>
