--- a/site/index.html
+++ b/site/index.html
@@ -1,197 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="shortcut icon" href="#" type="image/x-icon" />
-    <title>Сайтік на колінці</title>
-  </head>
 
-  <body>
-    <main class="main">
-      <section class="start modal">
-        <div class="start__logo-wrapper">
-          <a
-            target="_blank"
-            href="https://dmytrokolisnyk2.github.io/ubermensches_project/build/"
-            class="start__link"
-          >
-            <img src="./img/logo-big@1X.png" class="start__logo" alt="logo"
-          /></a>
-        </div>
-        <div class="start__controls-wrapper">
-          <button type="button" class="start__author start__open-modal start__controls">
-            A
-          </bu>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="shortcut icon" href="#" type="image/x-icon" />
+  <title>Сайтік на колінці</title>
+</head>
 
-          <button class="start__btn start__open-modal" type="button">
-            <span class="start__btn-text">play</span>
-          </button>
-          <button type="button" class="start__how-to-play start__open-modal start__controls">
-            ?
-          </button>
-        </div>
-      </section>
-      <section class="hidden-modal how-to-play modal">
-        <h2 class="how-to-play__headline">How To Play?</h2>
-        <div class="how-to-play__close">
-          <img src="./img/Cansel-button@1X.png" alt="close_btn" />
-        </div>
-        <div class="how-to-play__wrapper">
-          <p class="how-to-play__text">
-            First, click the "play" button. You will see a table where you need to select the number of cards and time. If you are
-            not playing alone, go to the next "multiplayer" function, it is next to the "single player" function. You need to choose
-            the number of cards and the number of players. Then click "start". You see the cards on the screen. You must find two
-            identical cards for the time you have chosen.
-          </p>
-          <div class="how-to-play__photo-wrapper">
-            <div></div>
-            <div></div>
-          </div>
-        </div>
-      </section>
-      <section class="settings modal hidden-modal">
-        <div class="settings__type-wrapper">
-          <div
-            data-type="singlePlayer"
-            class="settings__type settings__type--active"
-          >
-            <span data-type="singlePlayer" class="game-type__text">Single player</span>
-          </div>
-          <div data-type="multiPlayer" class="settings__type">
-            <span data-type="multiPlayer" class="game-type__text">Multi player</span>
-          </div>
-          <div data-type="arcade" class="settings__type">
-            <span data-type="arcade" class="game-type__text">Arcade</span>
-          </div>
-        </div>
-        <div class="settings__wrapper">
-          <div class="settings__by-type settings__singlePlayer">
-            <div class="settings__count-cards">
-              <h2 class="settings__headline">Виберіть кількість карток</h2>
-              <div class="settings__wrappers count-cards__wrapper">
-                <button type="button" class="settings__btn count-btn settings__btn--choosed" data-count="12">12</button
-                ><button type="button" class="settings__btn count-btn" data-count="18">
-                  18</button
-                ><button type="button" class="settings__btn count-btn" data-count="24">
-                  24</button
-                ><button type="button" class="settings__btn count-btn" data-count="36">
-                  36
-                </button>
-              </div>
-            </div>
-            <div class="settings__count-timer">
-              <h2 class="settings__headline">Виберіть кількість часу</h2>
-              <div class="count-timer__wrapper settings__wrappers">
-                <button type="button" class="settings__btn count-timer" data-count="30">
-                  0.5 min</button
-                ><button type="button" class="settings__btn count-timer settings__btn--choosed" data-count="60">
-                  1 min</button
-                ><button type="button" class="settings__btn count-timer" data-count="120">
-                  2 min</button
-                ><button type="button" class="settings__btn count-timer" data-count="180">
-                  3 min
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="settings__by-type settings__multiPlayer hidden-modal">
-            <div class="settings__count-cards">
-              <h2 class="settings__headline">Виберіть кількість карток</h2>
-              <div class="count-cards__wrapper settings__wrappers">
-                <button type="button" class="settings__btn count-btn settings__btn--choosed" data-count="12">12</button
-                ><button type="button" class="settings__btn count-btn" data-count="18">
-                  18</button
-                ><button type="button" class="settings__btn count-btn" data-count="24">
-                  24</button
-                ><button type="button" class="settings__btn count-btn" data-count="36">
-                  36
-                </button>
-              </div>
-            </div>
-            <div class="settings__count-player">
-              <h2 class="settings__headline">Виберіть кількість гравців</h2>
-              <div class="count-player__wrapper settings__wrappers">
-                <button  type="button" class="settings__btn count-timer settings__btn--choosed" data-count="2">
-                  2</button
-                ><button type="button" class="settings__btn count-timer" data-count="3">
-                  3</button
-                ><button type="button" class="settings__btn count-timer" data-count="4">
-                  4
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="settings__by-type settings__arcade hidden-modal">
-            <div class="settings__count-cards">
-              <h2 class="settings__headline">Виберіть рівень</h2>
-              <div class="arcade__btn-wrapper settings__wrappers">
-                <button class="settings__btn arcade__btn">1</button
-                ><button class="settings__btn arcade__btn arcade__btn--close">2</button
-                ><button class="settings__btn arcade__btn arcade__btn--close">3</button
-                ><button class="settings__btn arcade__btn arcade__btn--close">4</button
-                ><button class="settings__btn arcade__btn arcade__btn--close">5</button
-                ><button class="settings__btn arcade__btn arcade__btn--close">6</button
-                ><button class="settings__btn arcade__btn arcade__btn--close">7</button
-                ><button class="settings__btn arcade__btn arcade__btn--close">8</button
-                ><button class="settings__btn arcade__btn arcade__btn--close">9</button
-                ><button class="settings__btn arcade__btn arcade__btn--close">10</button>
-              </div>
-            </div>
-          </div>
-        <button type="button" class="settings__start-btn">start</button>
+<body>
+  <main class="main">
+    <section class="start modal">
+      <div class="start__logo-wrapper"> <a target="_blank"
+          href="https://dmytrokolisnyk2.github.io/ubermensches_project/build/" class="start__link">
+          <picture>
+            <source srcset="./img/logo-big@1X.webp" type="image/webp"><img src="./img/logo-big@1X.png"
+              class="start__logo" alt="logo" />
+          </picture>
+        </a>
       </div>
-      </section>
-        <div class="game__congratulation hidden-modal"></div>
-      <section class="game hidden-modal">
-    <!-- <div class="game__counters-wrapper"> -->
-          <div class="game__player-counter hidden game__player-counter--1">0</div>
-          <div class="game__player-counter hidden game__player-counter--2">0</div>
-          <div class="game__player-counter hidden game__player-counter--3">0</div>
-          <div class="game__player-counter hidden game__player-counter--4">0</div>
-    <!-- </div> -->
-    <div class="game__start-number-wrapper hidden-modal">
-      <span class="game__start-number hidden-modal">3</span>
-      <span class="game__start-number hidden-modal">2</span>
-      <span class="game__start-number hidden-modal">1</span>
-      <span class="game__start-number hidden-modal">GO!</span>
-    </div>
-        <div class="game__player-turn hidden"></div>
-        <div class="game__card-container-wrapper"><div class="card-container"></div></div>
-        <div class="timer hidden-modal">
-          <div class="timer__minutes timer__inner">0</div>
-          <span class="timer__inner">:</span>
-          <div class="timer__seconds timer__inner">00</div>
+      <div class="start__controls-wrapper"> <button type="button"
+          class="start__author start__open-modal start__controls"> A </bu>
+          <button class="start__btn start__open-modal" type="button"> <span class="start__btn-text">play</span>
+          </button> <button type="button" class="start__how-to-play
+            start__open-modal
+            start__controls"> ? </button> </div>
+    </section>
+    <section class="hidden-modal how-to-play modal">
+      <h2 class="how-to-play__headline">How To Play?</h2>
+      <div class="how-to-play__close">
+        <picture>
+          <source srcset="./img/Cansel-button@1X.webp" type="image/webp"><img src="./img/Cansel-button@1X.png"
+            alt="close_btn" />
+        </picture>
+      </div>
+      <div class="how-to-play__wrapper">
+        <p class="how-to-play__text">
+          First, click the "play" button. You will see a table where you need
+          to select the number of cards and time. If you are not playing
+          alone, go to the next "multiplayer" function, it is next to the
+          "single player" function. You need to choose the number of cards and
+          the number of players. Then click "start". You see the cards on the
+          screen. You must find two identical cards for the time you have
+          chosen. </p>
+        <div class="how-to-play__photo-wrapper">
+          <div></div>
+          <div></div>
         </div>
-      </section>
-      <section class="win modal hidden-modal">
-        <div class="win__content-wrapper">
-          <h2 class="win__headline">You WIN!</h2>
-          <button class="win__btn win__open-menu win__open-modal" type="button">
-            <span class="win__btn-text">Back to menu</span></button><button class="win__btn win__replay win__open-modal" type="button">
-            <span class="win__btn-text">Replay</span>
-          </button>
+      </div>
+    </section>
+    <section class="settings modal
+        hidden-modal">
+      <div class="settings__type-wrapper">
+        <div data-type="singlePlayer" class="settings__type
+            settings__type--active"> <span data-type="singlePlayer" class="game-type__text">Single player</span> </div>
+        <div data-type="multiPlayer" class="settings__type"> <span data-type="multiPlayer" class="game-type__text">Multi
+            player</span>
         </div>
-        <img class='win__img' src="./img/win@1X.png" alt="win-image">
-      </section><section class="win lose modal hidden-modal">
-        <div class="win__content-wrapper">
-          <h2 class="win__headline">You LOSE</h2>
-          <button class="win__btn win__open-menu win__open-modal" type="button">
-            <span class="win__btn-text">Back to menu</span></button><button class="win__btn win__replay win__open-modal" type="button">
-            <span class="win__btn-text">Replay</span>
-          </button>
+        <div data-type="arcade" class="settings__type"> <span data-type="arcade" class="game-type__text">Arcade</span>
         </div>
-        <img class='win__img' src="./img/lose@1X.png" alt="win-image">
-      </section>
-    </main>
+      </div>
+      <div class="settings__wrapper">
+        <div class="settings__by-type
+            settings__singlePlayer">
+          <div class="settings__count-cards">
+            <h2 class="settings__headline">Виберіть кількість карток</h2>
+            <div class="settings__wrappers count-cards__wrapper"> <button type="button" class="settings__btn count-btn
+                  settings__btn--choosed" data-count="12">12</button><button type="button"
+                class="settings__btn count-btn" data-count="18">
+                18</button><button type="button" class="settings__btn
+                  count-btn" data-count="24"> 24</button><button type="button" class="settings__btn count-btn"
+                data-count="36"> 36 </button>
+            </div>
+          </div>
+          <div class="settings__count-timer">
+            <h2 class="settings__headline">Виберіть кількість часу</h2>
+            <div class="count-timer__wrapper settings__wrappers"> <button type="button"
+                class="settings__btn count-timer" data-count="30"> 0.5 min</button><button type="button"
+                class="settings__btn count-timer settings__btn--choosed" data-count="60"> 1 min</button><button
+                type="button" class="settings__btn count-timer" data-count="120"> 2 min</button><button type="button"
+                class="settings__btn count-timer" data-count="180"> 3 min
+              </button> </div>
+          </div>
+        </div>
+        <div class="settings__by-type settings__multiPlayer hidden-modal">
+          <div class="settings__count-cards">
+            <h2 class="settings__headline">Виберіть
+              кількість карток</h2>
+            <div class="count-cards__wrapper
+                settings__wrappers"> <button type="button" class="settings__btn
+                  count-btn settings__btn--choosed" data-count="12">12</button><button type="button"
+                class="settings__btn count-btn" data-count="18">
+                18</button><button type="button" class="settings__btn
+                  count-btn" data-count="24"> 24</button><button type="button" class="settings__btn count-btn"
+                data-count="36"> 36 </button>
+            </div>
+          </div>
+          <div class="settings__count-player">
+            <h2 class="settings__headline">Виберіть кількість гравців</h2>
+            <div class="count-player__wrapper settings__wrappers"> <button type="button" class="settings__btn count-timer
+                  settings__btn--choosed" data-count="2"> 2</button><button type="button"
+                class="settings__btn count-timer" data-count="3"> 3</button><button type="button"
+                class="settings__btn count-timer" data-count="4"> 4 </button>
+            </div>
+          </div>
+        </div>
+        <div class="settings__by-type
+            settings__arcade hidden-modal">
+          <div class="settings__count-cards">
+            <h2 class="settings__headline">Виберіть рівень</h2>
+            <div class="arcade__btn-wrapper settings__wrappers"> <button
+                class="settings__btn arcade__btn">1</button><button
+                class="settings__btn arcade__btn arcade__btn--close">2</button><button
+                class="settings__btn arcade__btn arcade__btn--close">3</button><button
+                class="settings__btn arcade__btn arcade__btn--close">4</button><button
+                class="settings__btn arcade__btn arcade__btn--close">5</button><button
+                class="settings__btn arcade__btn arcade__btn--close">6</button><button
+                class="settings__btn arcade__btn arcade__btn--close">7</button><button
+                class="settings__btn arcade__btn arcade__btn--close">8</button><button
+                class="settings__btn arcade__btn arcade__btn--close">9</button><button
+                class="settings__btn arcade__btn arcade__btn--close">10</button>
+            </div>
+          </div>
+        </div> <button type="button" class="settings__start-btn">start</button>
+      </div>
+    </section>
+    <div class="game__congratulation hidden-modal"></div>
+    <section class="game
+        hidden-modal">
+      <!-- <div class="game__counters-wrapper"> -->
+      <div class="game__player-counter hidden game__player-counter--1">0</div>
+      <div class="game__player-counter hidden game__player-counter--2">0</div>
+      <div class="game__player-counter hidden game__player-counter--3">0</div>
+      <div class="game__player-counter hidden game__player-counter--4">0</div>
+      <!-- </div> -->
+      <div class="game__start-number-wrapper hidden-modal">
+        <span class="game__start-number hidden-modal">3</span> <span class="game__start-number hidden-modal">2</span>
+        <span class="game__start-number hidden-modal">1</span> <span class="game__start-number hidden-modal">GO!</span>
+      </div>
+      <div class="game__player-turn hidden"></div>
+      <div class="game__card-container-wrapper">
+        <div class="card-container"></div>
+      </div>
+      <div class="timer hidden-modal">
+        <div class="timer__minutes
+            timer__inner">0</div> <span class="timer__inner">:</span>
+        <div class="timer__seconds timer__inner">00</div>
+      </div>
+    </section>
+    <section class="win modal hidden-modal">
+      <div class="win__content-wrapper">
+        <h2 class="win__headline">You WIN!</h2>
+        <button class="win__btn win__open-menu win__open-modal" type="button">
+          <span class="win__btn-text">Back to menu</span></button><button class="win__btn win__replay win__open-modal"
+          type="button"> <span class="win__btn-text">Replay</span> </button>
+      </div>
+      <picture>
+        <source srcset="./img/win@1X.webp" type="image/webp"><img class='win__img' src="./img/win@1X.png"
+          alt="win-image">
+      </picture>
+    </section>
+    <section class="win lose modal hidden-modal">
+      <div class="win__content-wrapper">
+        <h2 class="win__headline">You LOSE</h2>
+        <button class="win__btn win__open-menu win__open-modal" type="button">
+          <span class="win__btn-text">Back to menu</span></button><button class="win__btn win__replay win__open-modal"
+          type="button"> <span class="win__btn-text">Replay</span> </button>
+      </div>
+      <picture>
+        <source srcset="./img/lose@1X.webp" type="image/webp"><img class='win__img' src="./img/lose@1X.png"
+          alt="win-image">
+      </picture>
+    </section>
+  </main> <audio loop='loop' src="./music/main_theme.mp3" class="audio__main-theme"></audio> <audio loop='loop'
+    src="./music/gameplay.mp3" class="audio__game-play"></audio> <audio src="./music/won_sound.mp3"
+    class="audio__won"></audio> <audio src="./music/countdown.mp3" class="audio__countdown"></audio> <audio
+    src="./music/lose_sound.mp3" class="audio__lose"></audio>
+  <script src="./js/script.js" type="module"></script>
+</body>
 
-    <audio loop='loop' src="./music/main_theme.mp3" class="audio__main-theme"></audio>
-    <audio loop='loop' src="./music/gameplay.mp3" class="audio__game-play"></audio>
-    <audio src="./music/won_sound.mp3" class="audio__won"></audio>
-    <audio src="./music/countdown.mp3" class="audio__countdown"></audio>
-    <audio src="./music/lose_sound.mp3" class="audio__lose"></audio>
-    <script src="./js/script.js" type="module"></script>
-  </body>
 </html>
