fix bug with picture tag

--- a/site/index.html
+++ b/site/index.html
@@ -127,7 +127,7 @@
         </div> <button type="button" class="settings__start-btn">start</button>
       </div>
     </section>
-    <div class="game__congratulation hidden-modal"></div>
+    <div class="game__congratulation hidden"></div>
     <section class="game
         hidden-modal">
       <!-- <div class="game__counters-wrapper"> -->
