add icon change text

--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="shortcut icon" href="#" type="image/x-icon" />
-  <title>Сайтік на колінці</title>
+  <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
+  <title>Brawl Stars card game</title>
 </head>
 
 <body>
@@ -66,7 +67,7 @@
         <div class="settings__by-type
             settings__singlePlayer">
           <div class="settings__count-cards">
-            <h2 class="settings__headline">Виберіть кількість карток</h2>
+            <h2 class="settings__headline">Select the amount of cards</h2>
             <div class="settings__wrappers count-cards__wrapper"> <button type="button" class="settings__btn count-btn
                   settings__btn--choosed" data-count="12">12</button><button type="button"
                 class="settings__btn count-btn" data-count="18">
@@ -76,7 +77,7 @@
             </div>
           </div>
           <div class="settings__count-timer">
-            <h2 class="settings__headline">Виберіть кількість часу</h2>
+            <h2 class="settings__headline">Select the amount of time</h2>
             <div class="count-timer__wrapper settings__wrappers"> <button type="button"
                 class="settings__btn count-timer" data-count="30"> 0.5 min</button><button type="button"
                 class="settings__btn count-timer settings__btn--choosed" data-count="60"> 1 min</button><button
@@ -87,8 +88,7 @@
         </div>
         <div class="settings__by-type settings__multiPlayer hidden-modal">
           <div class="settings__count-cards">
-            <h2 class="settings__headline">Виберіть
-              кількість карток</h2>
+            <h2 class="settings__headline">Select the amount of cards</h2>
             <div class="count-cards__wrapper
                 settings__wrappers"> <button type="button" class="settings__btn
                   count-btn settings__btn--choosed" data-count="12">12</button><button type="button"
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div class="settings__count-player">
-            <h2 class="settings__headline">Виберіть кількість гравців</h2>
+            <h2 class="settings__headline">Select the number of players</h2>
             <div class="count-player__wrapper settings__wrappers"> <button type="button" class="settings__btn count-timer
                   settings__btn--choosed" data-count="2"> 2</button><button type="button"
                 class="settings__btn count-timer" data-count="3"> 3</button><button type="button"
@@ -110,7 +110,7 @@
         <div class="settings__by-type
             settings__arcade hidden-modal">
           <div class="settings__count-cards">
-            <h2 class="settings__headline">Виберіть рівень</h2>
+            <h2 class="settings__headline">Select level</h2>
             <div class="arcade__btn-wrapper settings__wrappers"> <button
                 class="settings__btn arcade__btn">1</button><button
                 class="settings__btn arcade__btn arcade__btn--close">2</button><button
@@ -152,7 +152,7 @@
     </section>
     <section class="win modal hidden-modal">
       <div class="win__content-wrapper">
-        <h2 class="win__headline">You WIN!</h2>
+        <h2 class="win__headline">You WON!</h2>
         <button class="win__btn win__open-menu win__open-modal" type="button">
           <span class="win__btn-text">Back to menu</span></button><button class="win__btn win__replay win__open-modal"
           type="button"> <span class="win__btn-text">Replay</span> </button>
@@ -164,7 +164,7 @@
     </section>
     <section class="win lose modal hidden-modal">
       <div class="win__content-wrapper">
-        <h2 class="win__headline">You LOSE</h2>
+        <h2 class="win__headline">You LOST</h2>
         <button class="win__btn win__open-menu win__open-modal" type="button">
           <span class="win__btn-text">Back to menu</span></button><button class="win__btn win__replay win__open-modal"
           type="button"> <span class="win__btn-text">Replay</span> </button>
