--- a/site/index.html
+++ b/site/index.html
@@ -67,7 +67,7 @@
                 src="./img/authors_Bogdan.png" alt="Bogdan">
             </picture>
             <h4 class="authors_name"> Bogdanchick </h4>
-            <p class="authors_text"> TeamLeak </p>
+            <p class="authors_text"> TeamLead </p>
           </div>
           <div class="authors_card">
             <picture>
@@ -75,7 +75,7 @@
                 src="./img/authors_Mari.png" alt="Mari">
             </picture>
             <h4 class="authors_name"> Mariia Hrypych </h4>
-            <p class="authors_text"> Based in Chicago. I love playing tennis and loud music. </p>
+            <p class="authors_text">HR manager</p>
           </div>
           <div class="authors_card">
             <picture>
@@ -83,15 +83,15 @@
                 src="./img/authors_Dmytro.png" alt="Dmytro">
             </picture>
             <h4 class="authors_name"> Kolisnyk Dmytro </h4>
-            <p class="authors_text"> Based in Chicago. I love playing tennis and loud music. </p>
+            <p class="authors_text"> Based in Chicago. I love playing tennis and loud music.</p>
           </div>
           <div class="authors_card">
             <picture>
               <source srcset="./img/authors_Oksana.webp" type="image/webp"><img class="authors_img"
                 src="./img/authors_Oksana.png" alt="Oksana">
             </picture>
-            <h4 class="authors_name"> Bradley Hunter </h4>
-            <p class="authors_text"> Based in Chicago. I love playing tennis and loud music. </p>
+            <h4 class="authors_name">Oksana</h4>
+            <p class="authors_text"> 12 years old. Live in Lviv. </p>
           </div>
         </div>
       </div>
