--- a/start/index.html
+++ b/start/index.html
@@ -30,5 +30,16 @@
         <div class="start__how-to-play start__open-modal start__controls">?</div>
       </div>
     </section>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-45DVVNRJJ1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        window.dataLayer.push(arguments);
+      }
+
+      gtag('js', new Date()) ;
+      gtag('config', 'G-45DVVNRJJ1');
+    </script>
   </body>
 </html>
