connect to google analytic

--- a/site/index.html
+++ b/site/index.html
@@ -232,6 +232,17 @@
     src="./music/lose_sound.mp3" class="audio__lose"></audio> <audio src="./music/correct.mp3"
     class="audio__correct"></audio> <audio src="./music/flip.mp3" class="audio__flip"></audio>
   <script src="./js/script.js" type="module"></script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-45DVVNRJJ1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      window.dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date()) ;
+    gtag('config', 'G-45DVVNRJJ1');
+  </script>
 </body>
 
 </html>
